Introducing simple FAT filesystem check which replaces invalid characters with "_".

BUG: 107616

svn path=/trunk/extragear/multimedia/k3b/; revision=618058